--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-   
+    <title>JS Calculator</title>
+
+    <link rel="stylesheet" href="./assets/stylesheets/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/stylesheets/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" href="./assets/stylesheets/application.css" />
 
     <script src="./assets/javascripts/jquery-1.9.1.js"></script>
     <script src="./assets/javascripts/calculator.js"></script>
